[package]
name = "tokio-async-await-test"
version = "0.1.0"
authors = ["Lucio Franco <luciofranco14@gmail.com>"]
description = "A macro for better async/await tokio testing"

edition = "2018"

readme = "README.md"
license = "MIT/Apache-2.0"

repository = "https://github.com/LucioFranco/tokio-async-await-test"

[badges]
travis-ci = { repository = "LucioFranco/tokio-async-await-test", branch = "master" }

[lib]
proc-macro = true

[dependencies]
syn = { version = "0.15", features = ["full"] }
quote = "0.6"
futures-preview = { version = "0.3.0-alpha.17"}
